--- a/PR189-Retrolambda/build.gradle
+++ b/PR189-Retrolambda/build.gradle
@@ -1,16 +1,28 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-  repositories {
+    repositories {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.2.0'
-    classpath 'me.tatarka:gradle-retrolambda:3.3.0'
+    classpath 'com.android.tools.build:gradle:2.3.0'
+    classpath 'me.tatarka:gradle-retrolambda:3.6.0'
   }
 }
 
 allprojects {
-  repositories {
+    repositories {
     jcenter()
   }
 }
+
+ext {
+    compileSdkVersion = 25
+    minSdkVersion = 14
+    buildToolsVersion = "25.0.2"
+    retrolambdaVersion = "3.6.0"
+    support_library_version = "25.2.0"
+    espresso_version = "2.2.2"
+    testrunner_version = "0.5"
+}
+
+
