--- a/PR124-MaterialDialogFragment/app/build.gradle
+++ b/PR124-MaterialDialogFragment/app/build.gradle
@@ -1,13 +1,17 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.0"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
         applicationId "es.iessaladillo.pedrojoya.pr0124"
-        minSdkVersion 14
-        targetSdkVersion 22
+        compile fileTree(dir: 'libs', include: ['*.jar'])
+        compile "com.android.support:appcompat-v7:$rootProject.ext.support_library_version"
+        testCompile "junit:junit:$rootProject.ext.junit_version"
+        androidTestCompile("com.android.support.test.espresso:espresso-core:$rootProject.ext.espresso_version", {
+            exclude group: 'com.android.support', module: 'support-annotations'
+        })
         versionCode 1
         versionName "1.0"
     }
@@ -21,7 +25,11 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.0.0'
+    compile "com.android.support:appcompat-v7:$rootProject.ext.support_library_version"
+    testCompile "junit:junit:$rootProject.ext.junit_version"
+    androidTestCompile("com.android.support.test.espresso:espresso-core:$rootProject.ext.espresso_version", {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.avast:android-styled-dialogs:2.2.0'
     compile 'com.github.citux:datetimepicker:0.1.2'
