--- a/PR124-MaterialDialogFragment/gradle/wrapper/gradle-wrapper.properties
+++ b/PR124-MaterialDialogFragment/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Fri May 06 06:51:02 CEST 2016
+#Fri Mar 10 10:20:35 CET 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.10-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-3.3-all.zip
