--- a/PR130-Progreso/build.gradle
+++ b/PR130-Progreso/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:2.3.0'
     }
 }
 
@@ -12,4 +12,14 @@ allprojects {
     repositories {
         jcenter()
     }
+}
+
+ext {
+    compileSdkVersion = 25
+    minSdkVersion = 14
+    buildToolsVersion = "25.0.2"
+    junit_version = "4.12"
+    espresso_version = "2.2.2"
+    support_library_version = "25.2.0"
+    leakcanary_version = "1.5"
 }
