--- a/PR138-Palette/build.gradle
+++ b/PR138-Palette/build.gradle
@@ -6,8 +6,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'com.android.tools.build:gradle:2.3.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,4 +17,15 @@ allprojects {
     repositories {
         jcenter()
     }
+}
+
+ext {
+    compileSdkVersion = 25
+    minSdkVersion = 14
+    buildToolsVersion = "25.0.2"
+    junit_version = "4.12"
+    espresso_version = "2.2.2"
+    support_library_version = "25.2.0"
+    picasso_version = "2.5.2"
+    butterknife_version = "8.5.1"
 }
