--- a/PR140-RetrofitXML/app/build.gradle
+++ b/PR140-RetrofitXML/app/build.gradle
@@ -1,19 +1,13 @@
 apply plugin: 'com.android.application'
 
-def support_library_version = "23.3.0"
-def retrofit_version = "2.0.2"
-def okhttp_version = "3.2.0"
-def stetho_version = "1.3.1"
-def mpandroidchart_version = "v2.2.4"
-
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
         applicationId "es.iessaladillo.pedrojoya.pr140"
-        minSdkVersion 14
-        targetSdkVersion 23
+        minSdkVersion 16
+        targetSdkVersion rootProject.ext.compileSdkVersion
         versionCode 1
         versionName "1.0"
     }
@@ -34,16 +28,22 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "com.android.support:appcompat-v7:${support_library_version}"
-    compile "com.android.support:design:${support_library_version}"
-    compile "com.squareup.retrofit2:retrofit:${retrofit_version}"
-    compile ("com.squareup.retrofit2:converter-simplexml:${retrofit_version}") {
+    compile "com.android.support:appcompat-v7:$rootProject.ext.support_library_version"
+    testCompile "junit:junit:$rootProject.ext.junit_version"
+    androidTestCompile("com.android.support.test.espresso:espresso-core:$rootProject.ext.espresso_version", {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    compile "com.android.support:design:$rootProject.ext.support_library_version"
+    compile "com.squareup.retrofit2:retrofit:$rootProject.ext.retrofit_version"
+    compile ("com.squareup.retrofit2:converter-simplexml:$rootProject.ext.retrofit_version") {
         exclude module: 'stax'
         exclude module: 'stax-api'
         exclude module: 'xpp3'
     }
-    compile "com.squareup.okhttp3:logging-interceptor:${okhttp_version}"
-    compile "com.facebook.stetho:stetho:${stetho_version}"
-    compile "com.facebook.stetho:stetho-okhttp3:${stetho_version}"
-    compile "com.github.PhilJay:MPAndroidChart:${mpandroidchart_version}"
+    compile "com.squareup.okhttp3:logging-interceptor:$rootProject.ext.okhttp_version"
+    compile "com.facebook.stetho:stetho:$rootProject.ext.stetho_version"
+    compile "com.facebook.stetho:stetho-okhttp3:$rootProject.ext.stetho_version"
+    compile "com.github.PhilJay:MPAndroidChart:$rootProject.ext.mpandroidchart_version"
+    debugCompile "com.readystatesoftware.chuck:library:$rootProject.ext.chuck_version"
+    releaseCompile "com.readystatesoftware.chuck:library-no-op:$rootProject.ext.chuck_version"
 }
