--- a/PR140-RetrofitXML/build.gradle
+++ b/PR140-RetrofitXML/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath 'com.android.tools.build:gradle:2.3.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,4 +20,18 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    compileSdkVersion = 25
+    minSdkVersion = 14
+    buildToolsVersion = "25.0.2"
+    junit_version = "4.12"
+    espresso_version = "2.2.2"
+    support_library_version = "25.2.0"
+    retrofit_version = "2.2.0"
+    chuck_version = "1.0.4"
+    okhttp_version = "3.6.0"
+    stetho_version = "1.4.2"
+    mpandroidchart_version = "v3.0.1"
 }
