--- a/PR144-AppBarLayout/gradle/wrapper/gradle-wrapper.properties
+++ b/PR144-AppBarLayout/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Sat May 07 17:58:59 CEST 2016
+#Fri Mar 10 13:33:18 CET 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.10-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-3.3-all.zip
