--- a/PR158-Realm/app/build.gradle
+++ b/PR158-Realm/app/build.gradle
@@ -20,6 +20,12 @@ android {
     }
 }
 
+repositories {
+    maven {
+        url 'https://github.com/uPhyca/stetho-realm/raw/master/maven-repo'
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "com.android.support:appcompat-v7:$rootProject.ext.support_library_version"
@@ -33,4 +39,6 @@ dependencies {
     compile "de.hdodenhof:circleimageview:$rootProject.ext.circleimageview_version"
     compile "com.jakewharton:butterknife:$rootProject.ext.butterknife_version"
     annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.ext.butterknife_version"
+    compile "com.facebook.stetho:stetho:$rootProject.ext.stetho_version"
+    compile "com.uphyca:stetho_realm:$rootProject.ext.stetho_realm_version"
 }
