--- a/PR158-Realm/build.gradle
+++ b/PR158-Realm/build.gradle
@@ -33,4 +33,6 @@ ext {
     circleimageview_version = "2.1.0"
     butterknife_version = "8.5.1"
     glide_version = "3.7.0"
+    stetho_version = "1.4.2"
+    stetho_realm_version = "2.0.0"
 }
