--- a/PR174-JobScheduler/build.gradle
+++ b/PR174-JobScheduler/build.gradle
@@ -6,8 +6,8 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
-        classpath 'me.tatarka:gradle-retrolambda:3.5.0'
+        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'me.tatarka:gradle-retrolambda:3.6.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -24,8 +24,9 @@ ext {
     compileSdkVersion = 25
     minSdkVersion = 14
     buildToolsVersion = "25.0.2"
-    retrolambdaVersion = "3.5.0"
-    support_library_version = "25.1.1"
+    junit_version = "4.12"
+    espresso_version = "2.2.2"
+    support_library_version = "25.2.0"
     butterknife_version = "8.5.1"
     junit_version = "4.12"
 }
