--- a/PR181-RecyclerViewMVP/app/build.gradle
+++ b/PR181-RecyclerViewMVP/app/build.gradle
@@ -27,6 +27,10 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "com.android.support:appcompat-v7:$rootProject.ext.support_library_version"
+    testCompile "junit:junit:$rootProject.ext.junit_version"
+    androidTestCompile("com.android.support.test.espresso:espresso-core:$rootProject.ext.espresso_version", {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
     compile "com.android.support:design:$rootProject.ext.support_library_version"
     compile "com.android.support:recyclerview-v7:$rootProject.ext.support_library_version"
     compile "com.squareup.picasso:picasso:$rootProject.ext.picasso_version"
