--- a/PR185-Flavors/app/src/main/AndroidManifest.xml
+++ b/PR185-Flavors/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="es.iessaladillo.pedrojoya.pr185"
+<manifest xmlns:tools="http://schemas.android.com/tools"
+          package="es.iessaladillo.pedrojoya.pr185"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
@@ -7,7 +8,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
 
         <activity
             android:name=".MainActivity"
