--- a/PR185-Flavors/build.gradle
+++ b/PR185-Flavors/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.2'
+        classpath 'com.android.tools.build:gradle:2.3.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -23,12 +23,13 @@ task clean(type: Delete) {
 }
 
 ext {
-    compileSdkVersion = 23
-    buildToolsVersion = "23.0.2"
+    compileSdkVersion = 25
     minSdkVersion = 14
+    buildToolsVersion = "25.0.2"
+    junit_version = "4.12"
+    espresso_version = "2.2.2"
+    support_library_version = "25.2.0"
     targetSdkVersion = 23
     versionCode = 1
     versionName = "1.0"
-    junitVersion = "4.12"
-    supportLibraryVersion = "23.4.0"
 }
