--- a/PR064-PreferenceFragment/gradle/wrapper/gradle-wrapper.properties
+++ b/PR064-PreferenceFragment/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Thu Apr 28 07:45:31 CEST 2016
+#Fri Mar 17 20:46:09 CET 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.10-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-3.3-all.zip
