--- a/PR114-HistorialLlamadas/app/build.gradle
+++ b/PR114-HistorialLlamadas/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "com.android.support:appcompat-v7:$rootProject.ext.support_library_version"
     compile "com.android.support:design:$rootProject.ext.support_library_version"
+    compile "com.android.support:recyclerview-v7:$rootProject.ext.support_library_version"
     compile "com.jakewharton:butterknife:$rootProject.ext.butterknife_version"
     // Usamos apt y no annotationProcessor porque permissionsdispatcher no está
     // actualizado y aún usa apt, por lo que crea incompatibilidad con
