--- a/PR202-RecyclerViewPagination/app/build.gradle
+++ b/PR202-RecyclerViewPagination/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     androidTestCompile("com.android.support.test.espresso:espresso-core:$rootProject.ext.espresso_version", {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile 'com.android.support:support-v4:25.3.0'
 }
