PR158 Add transparency to AppBarLayout

--- a/PR158-Realm/app/build.gradle
+++ b/PR158-Realm/app/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     })
     compile "com.android.support:design:$rootProject.ext.support_library_version"
     compile "com.android.support:recyclerview-v7:$rootProject.ext.support_library_version"
-    compile "com.github.bumptech.glide:glide:$rootProject.ext.glide_version"
+    compile "com.squareup.picasso:picasso:$rootProject.ext.picasso_version"
     compile "de.hdodenhof:circleimageview:$rootProject.ext.circleimageview_version"
     compile "com.jakewharton:butterknife:$rootProject.ext.butterknife_version"
     annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.ext.butterknife_version"
