PR203 Add Subjects

--- a/PR203-ObjectBox/app/src/main/AndroidManifest.xml
+++ b/PR203-ObjectBox/app/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:tools="http://schemas.android.com/tools"
-    package="es.iessaladillo.pedrojoya.pr158"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest package="es.iessaladillo.pedrojoya.pr158"
+          xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -15,7 +14,8 @@
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
-            android:name=".MainActivity">
+            android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -25,11 +25,18 @@
         <activity
             android:name=".DetalleActivity"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/DetalleTheme"
-            tools:ignore="UnusedAttribute">
+            android:theme="@style/AppTheme.NoActionBar.NoStatusBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+                android:value=".MainActivity"/>
+        </activity>
+        <activity
+            android:name=".SelecAsigActivity"
+            android:label="@string/asignaturas_del_alumno"
+            android:parentActivityName=".DetalleActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".DetalleActivity"/>
         </activity>
     </application>
 
