--- a/PR203-ObjectBox/app/build.gradle
+++ b/PR203-ObjectBox/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     compile "com.jakewharton:butterknife:$rootProject.ext.butterknife_version"
     annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.ext.butterknife_version"
     compile 'io.objectbox:objectbox-android:0.9.9'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
