--- a/PR204-MVPRxJava/app/build.gradle
+++ b/PR204-MVPRxJava/app/build.gradle
@@ -30,13 +30,17 @@ dependencies {
     compile "com.android.support:design:$rootProject.ext.support_library_version"
     compile "com.android.support:recyclerview-v7:$rootProject.ext.support_library_version"
     compile "com.android.support:cardview-v7:$rootProject.ext.support_library_version"
+    compile "com.jakewharton:butterknife:$rootProject.ext.butterknife_version"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.ext.butterknife_version"
     compile "com.squareup.picasso:picasso:$rootProject.ext.picasso_version"
     compile "de.hdodenhof:circleimageview:$rootProject.ext.circleimageview_version"
     compile "io.reactivex.rxjava2:rxjava:$rootProject.ext.rxjava_version"
     compile "io.reactivex.rxjava2:rxandroid:$rootProject.ext.rxandroid_version"
 
     testCompile "junit:junit:$rootProject.ext.junit_version"
+    testCompile "org.mockito:mockito-core:$rootProject.ext.mockito_version"
     androidTestCompile("com.android.support.test.espresso:espresso-core:$rootProject.ext.espresso_version", {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile "com.android.support:support-v4:$rootProject.ext.support_library_version"
 }
