--- a/PR204-MVPRxJava/build.gradle
+++ b/PR204-MVPRxJava/build.gradle
@@ -6,9 +6,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.0'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'me.tatarka:gradle-retrolambda:3.6.0'
     }
 }
 
@@ -23,8 +21,10 @@ ext {
     minSdkVersion = 16
     buildToolsVersion = "25.0.2"
     junit_version = "4.12"
+    mockito_version = "2.7.19"
     espresso_version = "2.2.2"
     support_library_version = "25.3.0"
+    butterknife_version = "8.5.1"
     picasso_version = "2.5.2"
     circleimageview_version = "2.1.0"
     rxjava_version = "2.0.7"
