--- a/PR012-ListViewOptimizado/build.gradle
+++ b/PR012-ListViewOptimizado/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.3'
+        classpath 'com.android.tools.build:gradle:2.3.0'
     }
 }
 
@@ -12,4 +12,15 @@ allprojects {
     repositories {
         jcenter()
     }
+}
+
+ext {
+    compileSdkVersion = 25
+    minSdkVersion = 16
+    buildToolsVersion = "25.0.2"
+    junit_version = "4.12"
+    mockito_version = "2.7.19"
+    espresso_version = "2.2.2"
+    support_test_version = "0.5"
+    support_library_version = "25.3.1"
 }
