--- a/PR020-MenuContextual/app/build.gradle
+++ b/PR020-MenuContextual/app/build.gradle
@@ -1,15 +1,13 @@
 apply plugin: 'com.android.application'
 
-def support_library_version = "24.2.1"
-
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
         applicationId "es.iessaladillo.pedrojoya.pr020"
-        minSdkVersion 14
-        targetSdkVersion 24
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.compileSdkVersion
     }
 
     buildTypes {
@@ -21,5 +19,10 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:appcompat-v7:${support_library_version}"
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile "com.android.support:appcompat-v7:$rootProject.ext.support_library_version"
+    testCompile "junit:junit:$rootProject.ext.junit_version"
+    androidTestCompile("com.android.support.test.espresso:espresso-core:$rootProject.ext.espresso_version", {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
 }
