--- a/PR048-DialogFragment/build.gradle
+++ b/PR048-DialogFragment/build.gradle
@@ -5,8 +5,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'com.android.tools.build:gradle:2.3.0'
     }
 }
 
@@ -14,4 +13,17 @@ allprojects {
     repositories {
         jcenter()
     }
+}
+
+ext {
+    compileSdkVersion = 25
+    minSdkVersion = 16
+    buildToolsVersion = "25.0.2"
+    junit_version = "4.12"
+    mockito_version = "2.7.19"
+    espresso_version = "2.2.2"
+    support_library_version = "25.3.1"
+    picasso_version = "2.5.2"
+    circleimageview_version = "2.1.0"
+    butterknife_version = "8.5.1"
 }
