--- a/PR198-PreferenceDagger/build.gradle
+++ b/PR198-PreferenceDagger/build.gradle
@@ -18,6 +18,9 @@ ext {
     compileSdkVersion = 25
     minSdkVersion = 16
     buildToolsVersion = "25.0.2"
+    junit_version = "4.12"
+    mockito_version = "2.7.19"
+    espresso_version = "2.2.2"
     support_library_version = "25.3.1"
-    dagger_version = "2.9"
+    dagger_version = "2.10"
 }
