--- a/PR097-RetainNonConfigurationInstance/app/build.gradle
+++ b/PR097-RetainNonConfigurationInstance/app/build.gradle
@@ -1,17 +1,13 @@
 apply plugin: 'com.android.application'
 
-def support_library_version = "24.2.0"
-def icepick_version = "3.2.0"
-
-
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
         applicationId "es.iessaladillo.pedrojoya.pr097"
-        minSdkVersion 14
-        targetSdkVersion 24
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.compileSdkVersion
         versionCode 1
         versionName "1.0"
     }
@@ -30,7 +26,11 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "com.android.support:appcompat-v7:${support_library_version}"
-    compile "frankiesardo:icepick:${icepick_version}"
-    provided "frankiesardo:icepick-processor:${icepick_version}"
+    compile "com.android.support:appcompat-v7:$rootProject.ext.support_library_version"
+    testCompile "junit:junit:$rootProject.ext.junit_version"
+    androidTestCompile("com.android.support.test.espresso:espresso-core:$rootProject.ext.espresso_version", {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    compile "frankiesardo:icepick:$rootProject.ext.icepick_version"
+    provided "frankiesardo:icepick-processor:$rootProject.ext.icepick_version"
 }
