--- a/PR090-StartedServiceReceiver/app/src/main/AndroidManifest.xml
+++ b/PR090-StartedServiceReceiver/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="es.iessaladillo.pedrojoya.pr090" >
 
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -9,7 +10,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        android:supportsRtl="true">
+        android:supportsRtl="true"
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
             android:name="es.iessaladillo.pedrojoya.pr090.actividades.MainActivity"
             android:label="@string/app_name" >
