--- a/PR097-RetainNonConfigurationInstance/app/src/main/AndroidManifest.xml
+++ b/PR097-RetainNonConfigurationInstance/app/src/main/AndroidManifest.xml
@@ -45,6 +45,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
+        <activity
+            android:name=".StarterActivity"
+            android:label="ActivityStarter"
+            android:parentActivityName=".MainActivity"
+            tools:ignore="UnusedAttribute">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
     </application>
 
 </manifest>
