--- a/PR097-RetainNonConfigurationInstance/build.gradle
+++ b/PR097-RetainNonConfigurationInstance/build.gradle
@@ -4,7 +4,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'me.tatarka:gradle-retrolambda:3.6.0'
     }
 }
 
@@ -23,4 +24,5 @@ ext {
     espresso_version = "2.2.2"
     support_library_version = "25.3.1"
     icepick_version = "3.2.0"
+    activitystarter_version = "0.50"
 }
