--- a/PR080-HTTPURLConnection/app/src/main/AndroidManifest.xml
+++ b/PR080-HTTPURLConnection/app/src/main/AndroidManifest.xml
@@ -11,9 +11,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning"
+        android:fullBackupContent="@xml/backup_descriptor">
         <activity
-            android:name="es.iessaladillo.pedrojoya.pr080.MainActivity"
+            android:name="es.iessaladillo.pedrojoya.pr080.ui.main.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
