--- a/PR080-HTTPURLConnection/build.gradle
+++ b/PR080-HTTPURLConnection/build.gradle
@@ -2,14 +2,23 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath 'com.android.tools.build:gradle:3.0.0-beta6'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        google()
     }
+}
+
+ext {
+    compileSdkVersion = 26
+    minSdkVersion = 19
+    buildToolsVersion = "26.0.0"
+    support_library_version = "26.1.0"
 }
