--- a/ConstraintLayout/build.gradle
+++ b/ConstraintLayout/build.gradle
@@ -32,5 +32,5 @@ ext {
     junit_version = "4.12"
     espresso_version = "3.0.1"
     support_library_version = "27.0.2"
-    constraintlayout_version = "1.0.2"
+    constraintlayout_version = "1.1.0-beta4"
 }
