--- a/PR010-ScrollView/build.gradle
+++ b/PR010-ScrollView/build.gradle
@@ -24,6 +24,6 @@ ext {
     junit_version = "4.12"
     espresso_version = "3.0.1"
     support_library_version = "27.0.2"
-    constraintlayout_version = "1.0.2"
+    constraintlayout_version = "1.1.0-beta4"
     support_test_version = "1.0.0"
 }
