--- a/PR059-ActionView/build.gradle
+++ b/PR059-ActionView/build.gradle
@@ -22,5 +22,5 @@ ext {
     minSdkVersion = 19
     buildToolsVersion = "26.0.2"
     support_library_version = "27.0.2"
-    constraintlayout_version = "1.0.2"
+    constraintlayout_version = "1.1.0-beta4"
 }
