--- a/PR138-Palette/build.gradle
+++ b/PR138-Palette/build.gradle
@@ -26,7 +26,7 @@ ext {
     minSdkVersion = 19
     buildToolsVersion = "26.0.2"
     support_library_version = "27.0.2"
-    constraintlayout_version = "1.0.2"
+    constraintlayout_version = "1.1.0-beta4"
     picasso_version = "2.5.2"
     butterknife_version = "8.8.1"
 }
