--- a/PR153-DataBindingRecyclerView/app/build.gradle
+++ b/PR153-DataBindingRecyclerView/app/build.gradle
@@ -29,6 +29,12 @@ android {
     }
 }
 
+allprojects {
+    repositories {
+        maven { url 'https://jitpack.io' }
+    }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.support:appcompat-v7:$rootProject.ext.support_library_version"
@@ -40,4 +46,13 @@ dependencies {
     implementation "com.android.support:recyclerview-v7:$rootProject.ext.support_library_version"
     implementation "com.squareup.picasso:picasso:$rootProject.ext.picasso_version"
     implementation "de.hdodenhof:circleimageview:$rootProject.ext.circleimageview_version"
+    implementation "com.github.moove-it:fakeit:$rootProject.ext.fakeit_version"
+    implementation "android.arch.lifecycle:runtime:$rootProject.ext.arch_version"
+    implementation "android.arch.lifecycle:extensions:$rootProject.ext.arch_version"
+    implementation "android.arch.paging:runtime:1.0.0-alpha5"
+    annotationProcessor "android.arch.lifecycle:compiler:$rootProject.ext.arch_version"
+    implementation "android.arch.persistence.room:runtime:$rootProject.ext.arch_version"
+    annotationProcessor "android.arch.persistence.room:compiler:$rootProject.ext.arch_version"
+    testImplementation "android.arch.persistence.room:testing:$rootProject.ext.arch_version"
 }
+
