--- a/PR157-GridRecyclerView/build.gradle
+++ b/PR157-GridRecyclerView/build.gradle
@@ -29,6 +29,6 @@ ext {
     minSdkVersion = 19
     buildToolsVersion = "26.0.2"
     support_library_version = "27.0.2"
-    constraintlayout_version = "1.0.2"
+    constraintlayout_version = "1.1.0-beta4"
     arch_version = "1.0.0"
 }
