--- a/PR170-DataBindingBidireccional/app/build.gradle
+++ b/PR170-DataBindingBidireccional/app/build.gradle
@@ -32,10 +32,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.support:appcompat-v7:$rootProject.ext.support_library_version"
-    testImplementation "junit:junit:$rootProject.ext.junit_version"
-    androidTestImplementation("com.android.support.test.espresso:espresso-core:$rootProject.ext.espresso_version", {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
     implementation "com.android.support:design:$rootProject.ext.support_library_version"
     implementation "com.squareup.picasso:picasso:$rootProject.ext.picasso_version"
+    implementation "com.android.support.constraint:constraint-layout:$rootProject.ext.constraintlayout_version"
+    implementation "android.arch.lifecycle:extensions:$rootProject.ext.arch_version"
 }
