--- a/PR170-DataBindingBidireccional/build.gradle
+++ b/PR170-DataBindingBidireccional/build.gradle
@@ -30,9 +30,8 @@ ext {
     minSdkVersion = 19
     buildToolsVersion = "26.0.2"
     junit_version = "4.12"
-    espresso_version = "3.0.1"
     support_library_version = "27.0.2"
-    retrolambdaVersion = "3.6.0"
-    constraintlayout_version = "1.0.1"
+    constraintlayout_version = "1.1.0-beta4"
     picasso_version = "2.5.2"
+    arch_version = "1.1.0"
 }
