--- a/PR196-SQLiteDAORxJava/build.gradle
+++ b/PR196-SQLiteDAORxJava/build.gradle
@@ -27,7 +27,7 @@ ext {
     minSdkVersion = 19
     buildToolsVersion = "26.0.2"
     support_library_version = "27.0.2"
-    constraintlayout_version = "1.0.2"
+    constraintlayout_version = "1.1.0-beta4"
     picasso_version = "2.5.2"
     circleimageview_version = "2.1.0"
     stetho_version = "1.5.0"
