--- a/PR203-ObjectBox/build.gradle
+++ b/PR203-ObjectBox/build.gradle
@@ -32,7 +32,7 @@ ext {
     minSdkVersion = 19
     buildToolsVersion = "26.0.2"
     support_library_version = "27.0.2"
-    constraintlayout_version = "1.0.2"
+    constraintlayout_version = "1.1.0-beta4"
     circleimageview_version = "2.1.0"
     butterknife_version = "8.8.1"
     picasso_version = "2.5.2"
