--- a/PR199-RetrofitYandexDagger/app/build.gradle
+++ b/PR199-RetrofitYandexDagger/app/build.gradle
@@ -41,8 +41,8 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$rootProject.ext.okhttp_version"
     implementation "com.facebook.stetho:stetho:$rootProject.ext.stetho_version"
     implementation "com.facebook.stetho:stetho-okhttp3:$rootProject.ext.stetho_version"
-    debugCompile "com.readystatesoftware.chuck:library:$rootProject.ext.chuck_version"
-    releaseCompile "com.readystatesoftware.chuck:library-no-op:$rootProject.ext.chuck_version"
+    debugImplementation "com.readystatesoftware.chuck:library:$rootProject.ext.chuck_version"
+    releaseImplementation "com.readystatesoftware.chuck:library-no-op:$rootProject.ext.chuck_version"
     implementation "com.google.dagger:dagger:$rootProject.ext.dagger_version"
     annotationProcessor "com.google.dagger:dagger-compiler:$rootProject.ext.dagger_version"
 }
