--- a/PR028-SQLiteLoader/app/build.gradle
+++ b/PR028-SQLiteLoader/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     implementation "de.hdodenhof:circleimageview:$rootProject.ext.circleimageview_version"
     implementation "com.facebook.stetho:stetho:$rootProject.ext.stetho_version"
     implementation "com.github.bumptech.glide:glide:$rootProject.ext.glide_version"
-    debugCompile "com.squareup.leakcanary:leakcanary-android:$rootProject.ext.leakcanary_version"
-    releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:$rootProject.ext.leakcanary_version"
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:$rootProject.ext.leakcanary_version"
+    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$rootProject.ext.leakcanary_version"
     testImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$rootProject.ext.leakcanary_version"
 }
