--- a/PR139-InstagramRetrofit/app/build.gradle
+++ b/PR139-InstagramRetrofit/app/build.gradle
@@ -38,6 +38,6 @@ dependencies {
     implementation "com.facebook.stetho:stetho:$rootProject.ext.stetho_version"
     implementation "com.facebook.stetho:stetho-okhttp3:$rootProject.ext.stetho_version"
     implementation "com.squareup.picasso:picasso:$rootProject.ext.picasso_version"
-    debugCompile "com.readystatesoftware.chuck:library:$rootProject.ext.chuck_version"
-    releaseCompile "com.readystatesoftware.chuck:library-no-op:$rootProject.ext.chuck_version"
+    debugImplementation "com.readystatesoftware.chuck:library:$rootProject.ext.chuck_version"
+    releaseImplementation "com.readystatesoftware.chuck:library-no-op:$rootProject.ext.chuck_version"
 }
