--- a/PR169-RetrofitYandex/app/build.gradle
+++ b/PR169-RetrofitYandex/app/build.gradle
@@ -40,8 +40,8 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$rootProject.ext.okhttp_version"
     implementation "com.facebook.stetho:stetho:$rootProject.ext.stetho_version"
     implementation "com.facebook.stetho:stetho-okhttp3:$rootProject.ext.stetho_version"
-    debugCompile "com.readystatesoftware.chuck:library:$rootProject.ext.chuck_version"
-    releaseCompile "com.readystatesoftware.chuck:library-no-op:$rootProject.ext.chuck_version"
+    debugImplementation "com.readystatesoftware.chuck:library:$rootProject.ext.chuck_version"
+    releaseImplementation "com.readystatesoftware.chuck:library-no-op:$rootProject.ext.chuck_version"
     implementation "android.arch.lifecycle:runtime:$rootProject.ext.arch_version"
     //noinspection GradleDependency
     implementation "android.arch.lifecycle:extensions:$rootProject.ext.arch_version"
