--- a/PR213-SQLiteCursorLoader/app/build.gradle
+++ b/PR213-SQLiteCursorLoader/app/build.gradle
@@ -44,6 +44,6 @@ dependencies {
     implementation "com.squareup.picasso:picasso:$rootProject.ext.picasso_version"
     implementation "com.android.support.constraint:constraint-layout:$rootProject.ext.constraintlayout_version"
 
-    debugCompile "com.squareup.leakcanary:leakcanary-android:$rootProject.ext.leakcanary_version"
-    releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:$rootProject.ext.leakcanary_version"
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:$rootProject.ext.leakcanary_version"
+    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$rootProject.ext.leakcanary_version"
 }
