--- a/PR235-PreferenceFragmentCompatv7fix/build.gradle
+++ b/PR235-PreferenceFragmentCompatv7fix/build.gradle
@@ -1,15 +1,10 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
         jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.1'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:3.3.0-alpha08'
     }
 }
 
@@ -24,7 +19,6 @@ allprojects {
 ext {
     compileSdkVersion = 27
     minSdkVersion = 21
-    buildToolsVersion = "27.0.3"
     support_library_version = "27.1.1"
     constraintlayout_version = "1.1.0"
     preferencefix_version = "27.1.1.0"
