--- a/PR005-IntentsExplicitos/app/build.gradle
+++ b/PR005-IntentsExplicitos/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
         applicationId "es.iessaladillo.pedrojoya.pr005"
@@ -28,13 +27,11 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "com.android.support:appcompat-v7:$rootProject.ext.support_library_version"
-    testImplementation "junit:junit:$rootProject.ext.junit_version"
-    androidTestImplementation "com.android.support:support-annotations:$rootProject.ext.support_library_version"
-    androidTestImplementation "com.android.support.test.espresso:espresso-core:$rootProject.ext.espresso_version"
-    androidTestImplementation "com.android.support:support-annotations:$rootProject.ext.espresso_version"
-    androidTestImplementation "com.android.support.test.espresso:espresso-intents:$rootProject.ext.espresso_version"
-    androidTestImplementation "com.android.support.test:runner:$rootProject.ext.support_test_version"
-    androidTestImplementation "com.android.support.test:rules:$rootProject.ext.support_test_version"
+    implementation "com.android.support:appcompat-v7:27.1.1"
+    testImplementation "junit:junit:4.12"
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:3.0.2"
+    androidTestImplementation "com.android.support.test.espresso:espresso-intents:3.0.2"
+    androidTestImplementation "com.android.support.test:runner:1.0.2"
+    androidTestImplementation "com.android.support.test:rules:1.0.2"
 }
 
