--- a/PR005-IntentsExplicitos/app/src/main/AndroidManifest.xml
+++ b/PR005-IntentsExplicitos/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         tools:ignore="AllowBackup,GoogleAppIndexingWarning"
         android:fullBackupContent="@xml/backup_descriptor">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.main.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,9 +20,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".StudentActivity"
+            android:name=".ui.student.StudentActivity"
             android:label="@string/app_name"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".ui.main.MainActivity"/>
     </application>
 
 </manifest>
