--- a/PR097-ConfigurationChange/app/build.gradle
+++ b/PR097-ConfigurationChange/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
         applicationId "es.iessaladillo.pedrojoya.pr097"
@@ -33,19 +32,11 @@ repositories {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "com.android.support:appcompat-v7:$rootProject.ext.support_library_version"
-    implementation "frankiesardo:icepick:$rootProject.ext.icepick_version"
-    annotationProcessor "frankiesardo:icepick-processor:$rootProject.ext.icepick_version"
-    implementation "com.github.marcinmoskala.activitystarter:activitystarter:$rootProject.ext.activitystarter_version"
-    annotationProcessor "com.github.marcinmoskala.activitystarter:activitystarter-compiler:$rootProject.ext.activitystarter_version"
-    implementation "android.arch.lifecycle:runtime:$rootProject.ext.arch_version"
-    implementation "android.arch.lifecycle:extensions:$rootProject.ext.arch_version"
-    annotationProcessor "android.arch.lifecycle:compiler:$rootProject.ext.arch_version"
-
-    testImplementation "junit:junit:$rootProject.ext.junit_version"
-
-    androidTestImplementation "com.android.support.test.espresso:espresso-core:$rootProject.ext.espresso_version"
-    androidTestImplementation "com.android.support:support-annotations:$rootProject.ext.support_library_version"
-    androidTestImplementation "com.android.support.test:runner:$rootProject.ext.support_test_version"
-    androidTestImplementation "com.android.support.test:rules:$rootProject.ext.support_test_version"
+    implementation "com.android.support:appcompat-v7:27.1.1"
+    implementation 'com.evernote:android-state:1.3.1'
+    annotationProcessor 'com.evernote:android-state-processor:1.3.1'
+    // Don't update ActivityStater version
+    implementation 'com.github.MarcinMoskala.ActivityStarter:activitystarter:1.11-beta'
+    annotationProcessor 'com.marcinmoskala.activitystarter:activitystarter-compiler:1.11-beta'
+    implementation "android.arch.lifecycle:extensions:1.1.1"
 }
