--- a/PR097-ConfigurationChange/app/src/main/AndroidManifest.xml
+++ b/PR097-ConfigurationChange/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         tools:ignore="AllowBackup,GoogleAppIndexingWarning"
         android:fullBackupContent="@xml/backup_descriptor">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.main.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -20,29 +20,29 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SaveActivity"
+            android:name=".ui.save.SaveActivity"
             android:label="@string/save_activity_label"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".ui.main.MainActivity">
         </activity>
         <activity
-            android:name=".RetainActivity"
+            android:name=".ui.retain.RetainActivity"
             android:label="@string/retain_activity_label"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".ui.main.MainActivity">
         </activity>
         <activity
-            android:name=".IcepickActivity"
+            android:name=".ui.state.AndroidStateActivity"
             android:label="@string/icepick_activity_label"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".ui.main.MainActivity">
         </activity>
         <activity
-            android:name=".StarterActivity"
+            android:name=".ui.starter.StarterActivity"
             android:label="@string/starter_activity_label"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".ui.main.MainActivity">
         </activity>
         <activity
-            android:name=".ViewModelActivity"
+            android:name=".ui.viewmodel.ViewModelActivity"
             android:label="@string/viewmodel_activity_label"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".ui.main.MainActivity"/>
     </application>
 
 </manifest>
