--- a/PR106-RecyclerView/app/build.gradle
+++ b/PR106-RecyclerView/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion '28.0.2'
 
     defaultConfig {
         applicationId "pedrojoya.iessaladillo.es.pr106"
@@ -34,17 +33,15 @@ allprojects {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "com.android.support:appcompat-v7:$rootProject.ext.support_library_version"
-    implementation "com.android.support:design:$rootProject.ext.support_library_version"
-    implementation "com.android.support:recyclerview-v7:$rootProject.ext.support_library_version"
-    implementation "com.android.support:cardview-v7:$rootProject.ext.support_library_version"
-    implementation "com.squareup.picasso:picasso:$rootProject.ext.picasso_version"
-    implementation "de.hdodenhof:circleimageview:$rootProject.ext.circleimageview_version"
-    implementation "com.github.moove-it:fakeit:$rootProject.ext.fakeit_version"
-    implementation "android.arch.lifecycle:runtime:$rootProject.ext.arch_version"
-    implementation "android.arch.lifecycle:extensions:$rootProject.ext.arch_version"
-    annotationProcessor "android.arch.lifecycle:compiler:$rootProject.ext.arch_version"
+    implementation "com.android.support:appcompat-v7:27.1.1"
+    implementation "com.android.support:design:27.1.1"
+    implementation "com.android.support:recyclerview-v7:27.1.1"
+    implementation "com.android.support:cardview-v7:27.1.1"
+    implementation "com.squareup.picasso:picasso:2.5.2"
+    implementation "de.hdodenhof:circleimageview:2.2.0"
+    implementation "com.github.moove-it:fakeit:v0.7"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
 
-    debugImplementation "com.squareup.leakcanary:leakcanary-android:$rootProject.ext.leakcanary_version"
-    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$rootProject.ext.leakcanary_version"
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:1.6.1"
+    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:1.6.1"
 }
