--- a/PR211-SQLiteRoom/app/build.gradle
+++ b/PR211-SQLiteRoom/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
         applicationId "es.iessaladillo.pedrojoya.pr211"
@@ -28,18 +27,16 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "com.android.support:appcompat-v7:$rootProject.ext.support_library_version"
-    implementation "com.android.support:design:$rootProject.ext.support_library_version"
-    implementation "com.android.support:recyclerview-v7:$rootProject.ext.support_library_version"
-    implementation "com.facebook.stetho:stetho:$rootProject.ext.stetho_version"
-    implementation "com.amulyakhare:com.amulyakhare.textdrawable:$rootProject.ext.textdrawable_version"
-    implementation "de.hdodenhof:circleimageview:$rootProject.ext.circleimageview_version"
-    implementation "com.squareup.picasso:picasso:$rootProject.ext.picasso_version"
-    implementation "com.android.support.constraint:constraint-layout:$rootProject.ext.constraintlayout_version"
-    implementation "android.arch.lifecycle:runtime:$rootProject.ext.arch_version"
-    implementation "android.arch.lifecycle:extensions:$rootProject.ext.arch_version"
-    annotationProcessor "android.arch.lifecycle:compiler:$rootProject.ext.arch_version"
-    implementation "android.arch.persistence.room:runtime:$rootProject.ext.room_version"
-    annotationProcessor "android.arch.persistence.room:compiler:$rootProject.ext.room_version"
-    testImplementation "android.arch.persistence.room:testing:$rootProject.ext.room_version"
+    implementation "com.android.support:appcompat-v7:27.1.1"
+    implementation "com.android.support:design:27.1.1"
+    implementation "com.android.support:recyclerview-v7:27.1.1"
+    implementation "com.facebook.stetho:stetho:1.5.0"
+    implementation "com.amulyakhare:com.amulyakhare.textdrawable:1.0.1"
+    implementation "de.hdodenhof:circleimageview:2.2.0"
+    implementation "com.squareup.picasso:picasso:2.5.2"
+    implementation "com.android.support.constraint:constraint-layout:1.1.3"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+    testImplementation "android.arch.persistence.room:testing:1.1.1"
 }
