--- a/PR211-SQLiteRoom/build.gradle
+++ b/PR211-SQLiteRoom/build.gradle
@@ -1,11 +1,10 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
         jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.1'
+        classpath 'com.android.tools.build:gradle:3.3.0-alpha10'
     }
 }
 
@@ -22,18 +21,4 @@ allprojects {
 ext {
     compileSdkVersion = 27
     minSdkVersion = 21
-    buildToolsVersion = "27.0.3"
-    support_library_version = "27.1.1"
-    constraintlayout_version = "1.1.0"
-    picasso_version = "2.5.2"
-    circleimageview_version = "2.2.0"
-    stetho_version = "1.5.0"
-    textdrawable_version = "1.0.1"
-    arch_version = "1.1.1"
-    room_version = "1.0.0"
 }
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
-
