Create Injector and improve Database
Return int from insert and delete in Database.
Show error message in Activity depending on value returned by Database.

--- a/PR011-ListViewSimple/app/src/main/AndroidManifest.xml
+++ b/PR011-ListViewSimple/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:allowBackup="false"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
-            android:name=".ui.main.MainActivity">
+            android:name=".ui.main.MainActivity"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
