--- a/PR146-CollapsingParallaxToolbar/app/build.gradle
+++ b/PR146-CollapsingParallaxToolbar/app/build.gradle
@@ -28,5 +28,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "androidx.appcompat:appcompat:1.0.2"
-    implementation "com.google.android.material:material:1.0.0"
+    implementation "com.google.android.material:material:1.1.0-alpha02"
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
+    implementation "androidx.core:core:1.1.0-alpha03"
+    implementation "androidx.fragment:fragment:1.1.0-alpha03"
 }
