PR188 - Move code from activity to fragment

--- a/PR188-PermissionsDispatcher/app/src/main/AndroidManifest.xml
+++ b/PR188-PermissionsDispatcher/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         tools:ignore="AllowBackup,GoogleAppIndexingWarning"
         android:fullBackupContent="@xml/backup_descriptor">
         <activity
-                android:name=".MainActivity"
+                android:name=".ui.main.MainActivity"
                 android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -20,6 +20,17 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <!-- FileProvider para compartir archivos (necesario para proporcionar
+la URI del archivo al programa para mostrar el archivo -->
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="es.iessaladillo.pedrojoya.pr188.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"/>
+        </provider>
     </application>
 
 </manifest>
