--- a/PR188-PermissionsDispatcher/app/build.gradle
+++ b/PR188-PermissionsDispatcher/app/build.gradle
@@ -34,8 +34,9 @@ repositories {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.appcompat:appcompat:1.0.0"
-    implementation "com.google.android.material:material:1.0.0"
-    implementation "com.github.hotchemi:permissionsdispatcher:$rootProject.ext.permissionsdispatcher_version"
-    annotationProcessor "com.github.hotchemi:permissionsdispatcher-processor:$rootProject.ext.permissionsdispatcher_version"
+    implementation "androidx.appcompat:appcompat:1.1.0-alpha01"
+    implementation "com.google.android.material:material:1.1.0-alpha02"
+    implementation "org.permissionsdispatcher:permissionsdispatcher:4.3.0"
+    annotationProcessor "org.permissionsdispatcher:permissionsdispatcher-processor:4.3.0"
+    implementation "androidx.fragment:fragment:1.1.0-alpha03"
 }
